Retira texto do HTML e aumenta tamanho do Canvas

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="js/Main.js" type="module"></script>
 </head>
 <body>
-    <h1>Exm03</h1>
-    <canvas></canvas>
+    <canvas style="width: 70vw; height: 40vw;"></canvas>
 </body>
 </html>
