Adiciona mensagem no final e aumenta canvas

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script src="js/Main.js" type="module"></script>
 </head>
 <body>
-    <canvas style="width: 70vw; height: 40vw;"></canvas>
+    <canvas style="width: 1200px; height: 700px;"></canvas>
 </body>
 </html>
