--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pandora's Nightmare</title>
+    <title>The Journey of Luke</title>
     <script src="js/Main.js" type="module"></script>
 </head>
 <body>
